# ToDoList

./: .gitignore  CLAUDE.md  README.md  index.html  package-lock.json  package.json  popup.html  tailwind.config.ts  vite.config.ts  启动HiTodo.bat
src/: App.tsx  index.css  popup.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: db.rs  lib.rs  main.rs  popup.rs  tray.rs
src/components/: AppLayout.tsx  ConfettiEffect.tsx  FocusMode.tsx  SortableTaskCard.tsx  TaskCard.tsx  TaskForm.tsx  TaskList.tsx  TaskPopup.tsx
src/components/ui/: button.tsx  input.tsx
src/hooks/: useHeartbeat.ts
src/lib/: utils.ts
src/stores/: todoStore.ts
